tui/src/snapshots/agere_tui__keymap_setup__tests__keymap_picker_wide.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  51 actions, 0 customized, 0 unbound.

  [All]  Common  Customized (0)  Unbound (0)  App  Composer  Editor  Navigation  Approval

  Type to search shortcuts
  › Global         Open Transcript            ctrl-t
    Global         Open External Editor       ctrl-g
    Global         Copy                       ctrl-o
    Global         Clear Terminal             ctrl-l
    Chat           Interrupt Turn             esc
    Chat           Decrease Reasoning Effort  alt-,
    Chat           Increase Reasoning Effort  alt-.
    Chat           Edit Queued Message        alt-up, shift-left

  left/right group · enter edit shortcut · * custom · - unbound · esc close
